# epam_pymeetup_2021

./: .pre-commit-config.yaml  README.md  export_az_creds.sh  pylama.ini
azure_lambda/: README.md  azure_main.py  lambda_main.py  pyproject.toml  serverless.yml  serverless_to_install_plugins.yml
azure_lambda/classes/: __init__.py  custom_logic.py
azure_lambda/functions/: handle_request.py
azure_tests/: .env_template  README.md  pyproject.toml  queue_in.py  queue_out.py  serverless.yml
azure_tests/functions/: process_queue_in.py  process_send_grid_message.py  process_send_message.py  setup_email.py
azure_tests/queue-in/: function.json
azure_tests/queue-out/: function.json
azure_tests/tests/: test_http_to_queue.py  test_queue_to_email.py  test_queue_to_email_provider.py  test_queue_to_send_grid.py  test_setup_email.py
