[tool.poetry]
name = "azure_lambda"
version = "0.1.0"
description = "Example of how to use serverlerss.com to multicloud development. Azure Functions + AWS lambda"
authors = ["Konstantin Mokhov <Konstantin_Mokhov@epam.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
validators = "^0.18.2"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint configuration
[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120
